# FileFolderMeta

./: .gitignore  FileFolderMeta.py  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: attach.yml
